k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  labels:
    name: mongo-headless
spec:
  type: LoadBalancer
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongo

---

# stateful set config for mongo
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
      matchLabels:
        role: mongo
        environment: production
  serviceName: "mongo-headless"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongo
        environment: production
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command: ["/bin/sh","-c"]
          args: ["echo 2J2W5Jm7G38y169r8s5T1dW > mongo.key; chmod 600 mongo.key; mongod --replSet zemuldo --keyFile mongo.key --auth --bind_ip_all"]

          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: persistent-storage
  volumeClaimTemplates:
  - metadata:
      name: persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "fast"
      resources:
        requests:
          storage: 5Gi
