k8s/site-api.yml
---

apiVersion: v1
kind: Service
metadata:
  name: site-api
spec:
  type: LoadBalancer
  ports:
  - port: 8090
    name: site
    targetPort: 8090
  selector:
    app: site-api
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site-api
  name: site-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site-api
  template:
    metadata:
      labels:
        app: site-api
    spec:
      containers:
      - image: zemuldo/site-api:latest
        name: site-api
        ports:
          - name: site-api
            containerPort: 8090
---
