k8s/site-ui.yml
---

apiVersion: v1
kind: Service
metadata:
  name: site-ui
  namespace: z-site
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    name: site
    targetPort: 3000
  selector:
    app: site-ui
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site-ui
  name: site-ui
  namespace: z-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site-ui
  template:
    metadata:
      labels:
        app: site-ui
    spec:
      containers:
      - image: zemuldo/site-ui:latest
        name: site-ui
        ports:
          - name: site-ui
            containerPort: 3000
---
