k8s/site-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: site-ingress
  namespace: z-site
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - zemuldo.com
    - www.zemuldo.com
    - api.zemuldo.com
    secretName: site-tls
  rules:
  - host: zemuldo.com
    http:
      paths:
      - path: /z-site-images
        backend:
          serviceName: site-api
          servicePort: 8090
      - backend:
          serviceName: site-ui
          servicePort: 3000
  - host: www.zemuldo.com
    http:
      paths:
      - path: /z-site-images
        backend:
          serviceName: site-api
          servicePort: 8090
      - backend:
          serviceName: site-ui
          servicePort: 3000
  - host: api.zemuldo.com
    http:
      paths:
      - backend:
          serviceName: site-api
          servicePort: 8090
